<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bg_info_text">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_info"
                        android:padding="20dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:paddingBottom="20dp"
                        android:paddingRight="20dp"
                        android:paddingLeft="20dp"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/button_start"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_start"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_green"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
</RelativeLayout>