<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/vouchers_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="X"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual_vouchers"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_these_code_into_icolumn"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textColor="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/voucher_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="24sp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"/>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_next"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_issued_arr"
                    android:background="@drawable/bg_button_green" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_cancel"
                    android:background="@drawable/bg_button_orange" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>