<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/vouchers_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virtual_voucher"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voucher_one_found"
            android:gravity="center"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/enter_this_code"-->
        <!--android:gravity="center"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_margin="20dp"-->
        <!--android:textColor="@android:color/black"/>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/voucher_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="28dp"
                android:text="" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_issued"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_issued_arr"
                    android:background="@drawable/bg_button_green" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_cancel"
                    android:background="@drawable/bg_button_orange" />
            </RelativeLayout>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<RelativeLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1">-->
        <!--<Button-->
        <!--android:id="@+id/button_cancel"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="@string/button_cancel"/>-->
        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1">-->
        <!--<Button-->
        <!--android:id="@+id/button_issued"-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:text="@string/button_issued" />-->
        <!--</RelativeLayout>-->
        <!--</LinearLayout>-->
    </LinearLayout>
</RelativeLayout>